--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/multer": "^1.4.3",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.0.3",
     "typeorm": "^0.2.24",
     "uuidv4": "^6.0.7"
