--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,12 +6,14 @@
     "password": "docker",
     "database": "gobarber",
     "entities": [
-        "./src/models/*.ts"
+        "./src/modules/**/infra/typeorm/entities/*.ts"
     ],
     "migrations": [
-        "./src/database/migrations/*.ts"
+        "./src/shared/infra/database/migrations/*.ts"
+
     ],
     "cli":{
-        "migrationsDir":"./src/database/migrations"
+        "migrationsDir": "./src/shared/infra/database/migrations"
+
     }
 }
